# cb-forth

./: CMakeLists.txt
codegen/: dict.c  dict.py  dictionary.json  dictionary.txt
include/: common.h  core.h  errors.h  io.h  native_words.h  user_dict.h
src/: core.c  dict.c  errors.c  io.c  main.c  native_words.c  sys_dict.c  user_dict.c
